RESOLVED FIXED167329
SharedArrayBuffer plus WebGL should not equal CRASH
https://bugs.webkit.org/show_bug.cgi?id=167329
Summary SharedArrayBuffer plus WebGL should not equal CRASH
Filip Pizlo
Reported 2017-01-23 15:10:51 PST
Patch forthcoming.
Attachments
the patch (3.95 KB, patch)
2017-01-23 15:12 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2017-01-23 15:12:41 PST
Created attachment 299544 [details] the patch
Filip Pizlo
Comment 2 2017-01-23 15:15:15 PST
Note You need to log in before you can comment on or make changes to this bug.